samples/_failures_safe/1761192661_ec2120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7424c428.c: In function ‘main’:
./samples/SAFE/__tmp_7424c428.c:130:5: error: expected expression at end of input
  130 |     while (get_next_token(input, len, &
      |     ^~~~~
./samples/SAFE/__tmp_7424c428.c:130:12: error: too few arguments to function ‘get_next_token’
  130 |     while (get_next_token(input, len, &
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7424c428.c:86:5: note: declared here
   86 | int get_next_token(const char *input, int len, int *pos, int *line, int *column, struct Token *token) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7424c428.c:130:5: error: expected declaration or statement at end of input
  130 |     while (get_next_token(input, len, &
      |     ^~~~~
